Create basic handlebars skeleton

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,38 @@
 <h1>Dogs!</h1>
 
-<h1>Dogs that haven't been pet yet!</h1>
+<h2>Dogs that haven't been pet yet!</h2>
 
 <ul>
     {{#each dogs}}
+        {{#unless isGoodBoy}}
+            {{> dogs/dog-block isGood=false}}
+        {{/unless}}
+    {{/each}}
 </ul>
+
+<h2>These dogs are goodbois!</h2>
+
+<ul>
+    {{#each dogs}}
+        {{#if isGoodBoy}}
+            {{> dogs/dog-block isGood=true}}
+        {{/if}}
+    {{/each}}
+</ul>
+
+<h2>Add a Dog</h2>
+<form class="create-form">
+    
+    <div class="form-group">
+        <label for="dog">Dog Name:</label>
+        <input type="text" id="dog" name="doggy_name">
+    </div>
+
+    <div class="form-group">
+        <label for="isGoodBoy">Is a good boy?</label><br>
+        <input type="radio" name="isGoodBoy" value="1" checked>Is a good boy!
+        <input type="radio" name="isGoodBoy" value="0">Not a good boy
+    </div>
+
+    <button type="submit">Add Dog</button>
+</form>
