Create delete function

--- a/views/partials/dogs/dog-block.handlebars
+++ b/views/partials/dogs/dog-block.handlebars
@@ -5,7 +5,7 @@
 		{{#if isGood}}Good boy!{{else}}Pet the Dog!{{/if}}
 	</button>
 
-	{{!-- <button class="delete-cat" data-id="{{id}}" value="X">
+	<button class="delete-dog" data-id="{{id}}" value="X">
 		X
-	</button> --}}
+	</button>
 </li>
