--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,7 +58,7 @@
         <div class="form-group">
             <label for="isGoodBoy"><strong>Is a good boy?</strong></label><br>
             <input type="radio" name="isGoodBoy" value="1" checked>Is a good boy!
-            <input type="radio" name="isGoodBoy" value="0">Not a good boy
+            <input type="radio" name="isGoodBoy" value="0">Not a good boy<small>(excited boi)</small>
         </div>
     </div>
 </div>
